Fixed player z-index

--- a/src/Player.scss
+++ b/src/Player.scss
@@ -2,7 +2,7 @@
   position: relative;
   display: inline-block;
   text-align: left;
-  z-index: 1;
+  z-index: 2;
 
   a {
     cursor: pointer;
